@@ -1684,12 +1684,14 @@ GEN     get_nf(GEN x, long *t);
 GEN     get_nfpol(GEN x, GEN *nf);
 GEN     get_prid(GEN x);
 GEN     idealfrobenius(GEN nf, GEN gal, GEN pr);
+GEN     idealfrobenius_aut(GEN nf, GEN gal, GEN pr, GEN aut);
 GEN     idealramfrobenius(GEN nf, GEN gal, GEN pr, GEN ram);
 GEN     idealramgroups(GEN nf, GEN gal, GEN pr);
 GEN     nf_get_allroots(GEN nf);
 long    nf_get_prec(GEN x);
 GEN     nfcertify(GEN x);
 GEN     nfgaloismatrix(GEN nf, GEN s);
+GEN     nfgaloispermtobasis(GEN nf, GEN gal);
 GEN     nfinit(GEN x, long prec);
 GEN     nfinit0(GEN x, long flag, long prec);
 GEN     nfinitall(GEN x, long flag, long prec);
